[gd_scene load_steps=6 format=2]

[ext_resource path="res://RadarGame/Font/TravelingTypewriter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://RadarGame/Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://GlobalTimer/ResetGamePopup.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 2.0
margin_top = -1.0
margin_right = 1026.0
margin_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 470.0
margin_top = 255.0
margin_right = 554.0
margin_bottom = 344.0

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 27.0
text = "Play"

[node name="TutorialButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 84.0
margin_bottom = 58.0
text = "Tutorial"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 84.0
margin_bottom = 89.0
text = "Quit"

[node name="DifficultyContainer" type="CenterContainer" parent="."]
visible = false
margin_left = 470.0
margin_top = 255.0
margin_right = 554.0
margin_bottom = 344.0

[node name="VBoxContainer" type="VBoxContainer" parent="DifficultyContainer"]
margin_left = 8.0
margin_right = 76.0
margin_bottom = 120.0

[node name="EasyButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_right = 68.0
margin_bottom = 27.0
text = "Easy"

[node name="NormalButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 68.0
margin_bottom = 58.0
text = "Normal"

[node name="HardButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 68.0
margin_bottom = 89.0
text = "Hard"

[node name="BackButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 68.0
margin_bottom = 120.0
text = "Back"

[node name="TitleLabel" type="Label" parent="."]
margin_left = 448.0
margin_top = 186.0
margin_right = 576.0
margin_bottom = 207.0
text = "Radar Operator"
align = 1
valign = 1

[node name="DifficultyLabel" type="Label" parent="."]
visible = false
margin_left = 448.0
margin_top = 216.0
margin_right = 576.0
margin_bottom = 237.0
text = "Difficulty"
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Popup" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -50.0
margin_right = -88.0
margin_bottom = -10.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
